[package]
name = "nvim_liveshare"
version = "0.1.0"
edition = "2024"

[dependencies]
mlua = { version = "0.10.5", features = ["lua51", "module", "serialize"] }
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
libc = "0.2.174"
